--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@
                  <!---Container Fluid-->
             </div>
             <!-- Footer -->
+                <div class="row">
+                        <div class="col-lg-12 text-center">
+                            Someone want to donate me?
+                            <p>
+                                <a href="https://saweria.co/putuofc" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Saweria</a>
+                            </p>
+                        </div>
+                    </div>
+            </div>
             <footer class="sticky-footer">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
