--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </div>
             <li class="nav-item">
                 <a class="nav-link" href="https://t.me/asuuu">
-                    <i class="fab fa-fw fa-telegram-plane"></i>
-                    <span>Telegram</span>
+                    <i class="fab fa-brands fa-whatsapp"></i>
+                    <span>WhatsApp</span>
                 </a>
             </li>
             <hr class="sidebar-divider">
