--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 Contact
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="https://t.me/asuuu">
+                <a class="nav-link" href="https://wa.me/6289630567696">
                     <i class="fab fa-brands fa-whatsapp"></i>
                     <span>WhatsApp</span>
                 </a>
