--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                 </a>
                 <div id="collapseSticker" class="collapse" aria-labelledby="headingTable" data-parent="#accordionSidebar">
                     <div class="py-2 collapse-inner rounded">
-                        <a class="collapse-item" target="_blank" href="/api/ragbot?message=hai" target="_blank" >RagBot Ai</a>
+                      <a class="collapse-item" target="_blank" href="/api/ragbot?message=hai" target="_blank" >RagBot Ai</a>
                       <a class="collapse-item" target="_blank" href="/api/smartcontract?message=hai" target="_blank" >SmartContract Ai</a>
                       <a class="collapse-item" target="_blank" href="/api/blackboxAIChat?message=hai" target="_blank" >BlackboxAIChat Ai</a>
+                      <a class="collapse-item" target="_blank" href="/api/gpt?text=hai" target="_blank" >Chat Gpt Ai</a>                     
                       <a class="collapse-item" target="_blank" href="/api/degreeguru?message=hai" target="_blank" >DegreeGuru Ai</a>
                  </div>
                 </div>
