--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Siputzx || APIs</title>
+    <title>WANZOFC || TECH</title>
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/default.css" rel="stylesheet">
@@ -22,7 +22,7 @@
         <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar">
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <i class="fa fa-smile-beam fa-2x"></i>
-                <div class="sidebar-brand-text mx-3">Siputzx APIs</div>
+                <div class="sidebar-brand-text mx-3">WANZOFC TECH</div>
             </a>
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
@@ -54,7 +54,7 @@
                 Contact
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="https://wa.me/6289630567696">
+                <a class="nav-link" href="https://wa.me/62895402567224">
                     <i class="fab fa-brands fa-whatsapp"></i>
                     <span>WhatsApp</span>
                 </a>
@@ -95,7 +95,7 @@
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">April 12, 2024</div>
+                    <div class="small text-gray-500">januari 01 20 2025</div>
                     <span style="font-size:12px;">Welcome to my rest apis</span>
                   </div>
                 </a>
@@ -106,7 +106,7 @@
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">April 12, 2024</div>
+                    <div class="small text-gray-500">januari 01 20 2025</div>
                     <span style="font-size:14px;">Kelahiran Rest Api</span>
                   </div>
                 </a>
@@ -180,7 +180,7 @@
                         <div class="col-lg-12 text-center">
                             Someone want to donate me?
                             <p>
-                                <a href="https://saweria.co/putuofc" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Saweria</a>
+                                <a href="https://saweria.co/wanzofc" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Saweria</a>
                             </p>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         Made with <i class="fa fa-heart faa-flash animated"></i> by
-                        <a href="https://github.com/siputzx" target="_blank" style="color: #fff;">Siputzx Production</a>
+                        <a href="https://github.com/wanzbrayy" target="_blank" style="color: #fff;">WANZOFC APIS</a>
                         </span>
                     </div>
                 </div>
