--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/default.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <style>
+        
+@font-face {
+    font-family: Nunito;
+    src: url(../font/Nunito-Regular.ttf);
+}
+html, body {
+    margin: 0;
+    overflow: hidden;
+    height: 100%;
+}
+canvas {
+    display: block;
+}
+
+    </style>
 </head>
 
 <body id="page-top" class="dark-mode">
