--- a/admin.html
+++ b/admin.html
@@ -50,10 +50,6 @@
       border-radius: 5px;
       background-color: #e9ecef;
     }
-
-    .error {
-      color: red;
-    }
   </style>
 </head>
 <body>
@@ -88,11 +84,14 @@
   <div id="settingsResult" class="result" style="display: none;"></div>
 
   <script>
-    const baseURL = "https://wanz-tech.vercel.app";
+    // Base URL API
+    const baseURL = "https://wanz-tech.vercel.app/";
 
     // Form Generate Token
     const tokenForm = document.getElementById("tokenForm");
     const tokenResult = document.getElementById("tokenResult");
+
+    let jwtToken = ""; // Untuk menyimpan token JWT yang dihasilkan
 
     tokenForm.addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -101,25 +100,21 @@
       const password = document.getElementById("password").value;
 
       try {
-        const response = await fetch(`${baseURL}/admin/generateToken`, {
+        const response = await fetch(`${baseURL}admin/generateToken`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ username, password }),
         });
 
-        const result = await response.json();
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Gagal menghasilkan token.");
 
-        if (response.status !== 200) {
-          throw new Error(result.error || "Gagal membuat token.");
-        }
-
+        jwtToken = data.token; // Simpan token JWT
         tokenResult.style.display = "block";
-        tokenResult.textContent = `JWT Token: ${result.token}`;
-        tokenResult.classList.remove("error");
+        tokenResult.textContent = `JWT Token: ${data.token}`;
       } catch (error) {
         tokenResult.style.display = "block";
         tokenResult.textContent = `Error: ${error.message}`;
-        tokenResult.classList.add("error");
       }
     });
 
@@ -133,41 +128,32 @@
       const apiKey = document.getElementById("apiKey").value;
       const apiLimit = document.getElementById("apiLimit").value;
 
-      const token = tokenResult.textContent.split(": ")[1];
-
-      if (!token) {
+      if (!jwtToken) {
         settingsResult.style.display = "block";
-        settingsResult.textContent = "Error: Token belum dibuat.";
-        settingsResult.classList.add("error");
+        settingsResult.textContent = "Error: JWT Token belum dihasilkan.";
         return;
       }
 
       try {
-        const response = await fetch(`${baseURL}/admin/setLimits`, {
+        const response = await fetch(`${baseURL}admin/setLimits`, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            Authorization: `Bearer ${token}`,
+            Authorization: `Bearer ${jwtToken}`,
           },
-          body: JSON.stringify({ customApiKey: apiKey, apiLimit }),
+          body: JSON.stringify({ apiKey, apiLimit }),
         });
 
-        const result = await response.json();
-
-        if (response.status !== 200) {
-          throw new Error(result.error || "Gagal menyimpan pengaturan.");
-        }
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Gagal menyimpan pengaturan.");
 
         settingsResult.style.display = "block";
-        settingsResult.textContent = "Settings berhasil disimpan!";
-        settingsResult.classList.remove("error");
+        settingsResult.textContent = "Pengaturan berhasil disimpan!";
       } catch (error) {
         settingsResult.style.display = "block";
         settingsResult.textContent = `Error: ${error.message}`;
-        settingsResult.classList.add("error");
       }
     });
   </script>
 </body>
 </html>
-
